adding more parameters

--- a/initial/src/main/resources/application.properties
+++ b/initial/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-logging.level.root=WARN
-logging.level.org.springframework.web=DEBUG
+logging.level.root=OFF
+logging.level.org.springframework=OFF
+log4j.logger.httpclient.wire.header=WARN
+log4j.logger.httpclient.wire.content=WARN
